get download task file
